--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        #button {
+            font-size: 200px;
+            text-align: left;
+            padding-left: 150px;
+        }
+
+        #button .top {
+            margin: 150px;
+        }
+
+        #button .left {
+            margin-left: 150px;
+        }
+
+        #button1{
+            text-align: right;
+            padding-right: 150px;
+        }
+
+    </style>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +28,19 @@
     <title>JoyCon</title>
 </head>
 <body>
-    <!-- buat komponen yang menggambarkan controller @MUTAMA -->
+    <div id="button">
+    <button class='top' style='font-size:50px;'type="button">&#8593;</button>
+    <button class='left' style='font-size:50px;'type="button">&#8592;</button>
+    <button class='right' style='font-size:50px;'type="button">&#8594;</button>
+    <button class='bottom' style='font-size:50px;'type="button">&#8595;</button>
+    </div>
+
+    <div id="button1">
+    <button style='font-size:50px;'type="button">B</button>
+    <button style='font-size:50px;'type="button">A</button>
+    </div>
+
+    <!-- buat komponen yang menggambarkan controller @MUTAMA --> 
     <!--    [^]                -->
     <!-- [<][v][>]      [B][A] -->
     <!--           atau        -->
