--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
         #button {
             font-size: 200px;
             text-align: left;
-            padding-left: 150px;
         }
 
         #button .top {
             margin: 150px;
+            margin-top: 100px;
         }
 
         #button .left {
             margin-left: 150px;
         }
+
+        #button .right {
+            margin-right: 100px;
+        }
+
+        #button .bottom {
+            margin-bottom: 100px;
+        }
+
 
         #button1{
             text-align: right;
