--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         #button {
             font-size: 200px;
             text-align: left;
+            background-color: yellowgreen;
         }
 
         #button .top {
